--- a/src/index.html
+++ b/src/index.html
@@ -8,44 +8,51 @@
     <link rel="stylesheet" href="./css/mobile.styles.css" media="(max-width: 768px)">
     <link rel="stylesheet" href="./css/fonts.css">
     <script defer src="./js/script.js"></script>
+    <script defer src="./js/carousel.js"></script>
 </head>
 <body>
   <nav>
     <div class="logo">
+      <a href="index.html">
         <img src="../assets/media/logos/arday_black_logo.png" alt="Logo">
+      </a>
     </div>
     <button class="nav-toggle" aria-label="Toggle navigation">
         <img src="../assets/media/icons/arrow_head.png" alt="Toggle arrow">
     </button>
     <ul class="nav-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Catálogo</a></li>
-        <li><a href="#">Compras</a></li>
-        <li><a href="#">Tallas</a></li>
+        <li><a href="#" data-page="about.html">About</a></li>
+        <li><a href="#" data-page="catalogue.html">Catálogo</a></li>
+        <li><a href="#" data-page="compras.html">Compras</a></li>
+        <li><a href="#" data-page="sizes.html">Tallas</a></li>
     </ul>
   </nav>
 
-  <div class="hero">
-      <div class="hero-message">
-          <h1>Te ayudamos confeccionando la prenda que deseas</h1>
-          <button class="scroll-btn" onclick="scrollToDresses()">
-              <img src="../assets/media/icons/arrow.png" alt="Scroll down">
-          </button>
-      </div>
-  </div>
+  <main id="content">
+    <div class="hero">
+        <div class="hero-message">
+            <h1>Te ayudamos confeccionando la prenda que deseas</h1>
+            <button class="scroll-btn" onclick="scrollToDresses()">
+                <img src="../assets/media/icons/arrow.png" alt="Scroll down">
+            </button>
+        </div>
+    </div>
 
-  <section id="dresses" class="dresses-section">
-      <h2>Our Collection</h2>
-      <p>Explore our exclusive range of dresses tailored for every occasion.</p>
-      <!-- Add dresses content here -->
-  </section>
+    <div class="carousel">
+      <button class="carousel-btn left">&lt;</button>
+      <div class="carousel-container">
+        <!-- Items will be dynamically loaded here -->
+      </div>
+      <button class="carousel-btn right">&gt;</button>
+    </div>
+    
+  </main>
 
   <footer>
       <p>&copy; 2025 Arday</p>
       <div class="social-links">
-          <a href="#">Facebook</a>
           <a href="#">Instagram</a>
-          <a href="#">Twitter</a>
+          <a href="#">TikTok</a>
       </div>
   </footer>
 </body>
