--- a/src/dress.html
+++ b/src/dress.html
@@ -1,11 +1,16 @@
 <section class="product-details">
-  <img id="big-image" src="" alt="Dress" />
+  <div class="product-images">
+    <div class="small-images"></div>
+    <img id="big-image" src="" alt="Dress" />
+  </div>
   <div class="product-info">
     <h2 id="dress-name"></h2>
-    <p id="dress-description"></p>
     <p id="dress-price"></p>
+    <p id="dress-description"></p>
+    <h3>Tallas</h3>
     <select id="size-select"></select>
+    <h3>Colores</h3>
     <select id="color-select"></select>
+    <button id="ws-button" onclick="sendWhatsAppMessage()">Enviar</button>
   </div>
-  <div class="small-images"></div>
 </section>
