--- a/src/sizes.html
+++ b/src/sizes.html
@@ -1,1 +1,18 @@
-<h1>Sizes</h1>
+<section class="sizes">
+  <div class="sizes-container">
+    <div>
+      <h1>
+        Tallas y medidas
+      </h1>
+      <p>
+        ¿Quieres saber tus medidas exactas? Aqui hay un tutorial detallado. Puedes detallarnos al momento de hacer tu pedido si deseas se haga a tu medida o con alguna talla general.
+      </p>
+      <button onclick="window.open('https://www.instagram.com/reel/Cx9EqvAM7rA/?igsh=MnpjYjFybmZydW5t', '_blank')">
+        Ver tutorial
+      </button>      
+    </div>
+    <div>
+      <img src="../assets/media/utils/sizes.png" alt="Sizes">
+    </div>
+  </div>
+</section>
