Add mobile styles

--- a/catalogue.html
+++ b/catalogue.html
@@ -1,5 +1,7 @@
 <section class="catalogue">
+  <button class="filter-toggle">Filtrar</button>
   <div class="filters-container">
+    <button class="close-filters">&times;</button>
     <h1>Filtrar por</h1>
     <div>
       <h2>Categoría</h2>
