--- a/dress.html
+++ b/dress.html
@@ -12,5 +12,17 @@
     <h3>Colores</h3>
     <select id="color-select"></select>
     <button id="ws-button" onclick="sendWhatsAppMessage()">Enviar</button>
+    <div>
+      <h3>Importante</h3>
+      <ul>
+        <li>Puedes encargarlo a la medida sin costo extra.</li>
+        <li>En color blanco el vestido lleva doble tela y aplica un extra de $5 o $10 al precio base segun el modelo.</li>
+        <li>Para tallas plus tendran un pequeño agregado de valor al precio base segun cotizacion.</li>
+      </ul>
+    </div>
+    <div>
+      <h3> Se envia en</h3>
+      <p>8 dias habiles</p>
+    </div>
   </div>
 </section>
