Add delivery info

--- a/delivery.html
+++ b/delivery.html
@@ -70,6 +70,11 @@
               Los pagos por medio de transferencias/deposito deberán pedir mediante WhatsApp los datos de cuenta, pueden escoger su banco de preferencia (Pichincha/Guayaquil).💵
             </p>
           </li>
+          <li>
+            <p>
+              Recuerda que cada modelo es realizado específicamente para ti, tus medidas y el diseño son tu idea por esto no aceptamos devoluciones, ni reembolsos.
+            </p>
+          </li>
         </ul>
       </div>
     </div>
